<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_paymentDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".PaymentDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/azul_main"
            android:elevation="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rowdies"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies"
            android:text="@string/detalles_de_compra"
            android:textColor="@color/text_info"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.02" />

        <LinearLayout
            android:id="@+id/detalle_tramite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textInfo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noms"
                android:textColor="@color/text_primary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/nombreEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/ejemplo_nombres"
                    android:textColor="@color/text_primary"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cognoms"
                android:textColor="@color/text_primary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/apellidoEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/ejemplo_apellidos"
                    android:textColor="@color/text_primary"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/correu"
                android:textColor="@color/text_primary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/correoEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/ejemplo_correo"
                    android:textColor="@color/text_primary"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tel_fon"
                android:textColor="@color/text_primary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/telefonoEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/ejemplo_numero"
                    android:textColor="@color/text_primary"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/direcci"
                android:textColor="@color/text_primary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/direccionEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/ejemplo_direccion"
                    android:textColor="@color/text_primary"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/localitat"
                android:textColor="@color/text_primary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/localidadEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/ejemplo_localidad"
                    android:textColor="@color/text_primary"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/detalle_pedido"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detalle_tramite" />

        <LinearLayout
            android:id="@+id/detalle_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/pago">

            <ImageView
                android:id="@+id/american_ultra"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:background="#E6F2FA"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/movicard_foto_comprimida" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/suscripci_n_premium"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:text="@string/_10"
                android:textColor="@color/text_primary"
                android:textSize="27sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:background="#D3D3D3"
            app:layout_constraintTop_toBottomOf="@id/detalle_pedido" />

        <LinearLayout
            android:id="@+id/resumenPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/detalle_pedido">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/subtotal"
                    android:textColor="#A9A9A9"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/_10"
                    android:textColor="#A9A9A9"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#D3D3D3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_price2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearGestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gesti_n"
                    android:textColor="#A9A9A9"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/gastosGestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_1"
                    android:textColor="#A9A9A9"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/iva_21_incluido"
                    android:textColor="#A9A9A9"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_1"
                    android:textColor="#A9A9A9"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/continuar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/azul_main"
            android:text="@string/boton_continuar"
            android:textColor="@color/button_primary_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resumenPago" />

        <!-- Menu bottom navagation -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_main"
            app:itemIconSize="40dp"
            app:itemIconTint="@color/white"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navegation" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Contenido principal de la pantalla -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Menú lateral (Navigation Drawer) -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_menu_drawer"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer_nav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Espacio para los ítems del menú -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!-- Botón de cerrar sesión -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/azul_main"
                android:text="@string/logout"
                android:textColor="@color/white"
                app:icon="@drawable/logout"
                app:iconTint="@color/white"
                app:iconGravity="textStart"
                app:iconPadding="8dp" />

            <!-- Copyright -->
            <TextView
                android:id="@+id/text_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/movicard_2025"
                android:textColor="@color/text_primary"
                android:textSize="12sp" />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>